--- a/index.html
+++ b/index.html
@@ -587,12 +587,28 @@
             <h3>Hush maison</h3>
             <p>Installation of lights for a party. Design of sound interactive light shadders.</p>
         </div>
-      <div style="margin-bottom: 2rem;" class="project-media">
-        <video controls>
-          <source src="https://imgur.com/RH7Oskz.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
+
+      <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-5">
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/RH7Oskz.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/POJ1irN.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots-container"></div>
+        </div>
     </div>
 
     <div class="project-card">
@@ -618,7 +634,7 @@
             <div class="slide">
                 <div class="project-media">
                     <video controls>
-                        <source src="ttps://imgur.com/jy2ubPI.mp4" type="video/mp4">
+                        <source src="https://imgur.com/jy2ubPI.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
