--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         <div style="margin-bottom: 2rem;" class="project-media">
             <!-- <div class="play-button"></div> -->
             <video controls>
-                <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
+                <source src="https://imgur.com/efmP5zU.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -573,12 +573,27 @@
             <h3>The last supper</h3>
             <p>Installation of paintings in our studio for a diner. Design of sound interactive light shadders.</p>
         </div>
-        <div style="margin-bottom: 2rem;" class="project-media">
-            <!-- <div class="play-button"></div> -->
-            <video controls>
-                <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+
+        <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-5">
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/J66QScc.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots-container"></div>
         </div>
     </div>
 
