--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             <div class="slide">
                 <div class="project-media">
                     <video controls>
-                        <source src="https://imgur.com/fS5PLJI.mp4" type="video/mp4">
+                        <source src="https://imgur.com/1cFb1cN.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -530,12 +530,40 @@
     <div class="project-card">
         <div class="project-info">
             <h3>Student party</h3>
-            <p>Light design with 2 IVLs</p>
+            <p>Light design with 2 IVLs.</p>
         </div>
         <div style="margin-bottom: 2rem;" class="project-media">
             <!-- <div class="play-button"></div> -->
             <video controls>
                 <source src="https://imgur.com/efmP5zU.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+
+    <div class="project-card">
+        <div class="project-info">
+            <h3>Student party</h3>
+            <p>Design and operation of the light scenography.</p>
+        </div>
+        <div style="margin-bottom: 2rem;" class="project-media">
+            <!-- <div class="play-button"></div> -->
+            <video controls>
+                <source src="https://imgur.com/6tAevvC.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+
+    <div class="project-card">
+        <div class="project-info">
+            <h3>Student party</h3>
+            <p>Design and operation of this scenography with 20 lyres and 4 k20.</p>
+        </div>
+        <div style="margin-bottom: 2rem;" class="project-media">
+            <!-- <div class="play-button"></div> -->
+            <video controls>
+                <source src="https://imgur.com/ZirdagH.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
