--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
             <div class="slide">
                 <div class="project-media">
                     <video controls>
-                        <source src="https://imgur.com/jy2ubPI.mp4" type="video/mp4">
+                        <source src="https://imgur.com/sVRQJ04.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
