--- a/index.html
+++ b/index.html
@@ -138,6 +138,47 @@
             color: #a8a8a8;
         }
 
+        .nav-item {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.9);
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1001;
+            border-radius: 4px;
+            margin-top: 0.5rem;
+        }
+
+        .nav-item:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a {
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: background-color 0.3s ease;
+        }
+
+        .dropdown-content a:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        /* Add a small arrow indicator */
+        .nav-link.has-dropdown::after {
+            content: '▼';
+            font-size: 0.7em;
+            margin-left: 5px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+
         /* Hero Section */
         #home {
             min-height: 100vh;
@@ -381,7 +422,13 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="nav-link">Home</a>
-            <a href="#projects" class="nav-link">Projects</a>
+            <div class="nav-item">
+                <a href="#projects" class="nav-link has-dropdown">Projects</a>
+                <div class="dropdown-content">
+                    <a href="#sbcs">SBCS</a>
+                    <a href="#studio-apelbaum">Studio Apelbaum</a>
+                </div>
+            </div>
             <a href="#contact" class="nav-link">Contact</a>
         </div>
     </nav>
@@ -394,7 +441,7 @@
   <section id="projects">
     <h1 style="text-align: center;">Projects</h1>
 
-    <h1 style="text-align: left;">SBCS</h1>
+    <h1 id="sbcs" style="text-align: left;">SBCS</h1>
 
     <div style="margin-bottom: 2rem;">
         SBCS is a student association in Paris dedicated to organizing events ranging from student parties to full-scale raves. 
@@ -582,7 +629,7 @@
         </div>
     </div> -->
 
-    <h1 style="text-align: left;">Studio Apelbaum</h1>
+    <h1  id="studio-apelbaum" style="text-align: left;">Studio Apelbaum</h1>
 
     <div style="margin-bottom: 2rem;">
         Jonathan Apelbaum is French Berlin-based artist. He creates large-scale oil paintings that he pairs with LED panels in order to create immersive experiences.
