--- a/index.html
+++ b/index.html
@@ -370,6 +370,16 @@
             background-color: #ffffff;
         }
 
+        /* Add styles for the LinkedIn link */
+        #contact a[href*="linkedin"] {
+            text-decoration: underline;
+        }
+
+        /* Keep the hover effect */
+        #contact a[href*="linkedin"]:hover {
+            color: #a8a8a8;
+        }
+
         #projects h1 {
             text-align: center;
             margin-bottom: 3rem;  /* Adds space below the "Projects" heading */
