--- a/index.html
+++ b/index.html
@@ -785,7 +785,8 @@
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:maxime.hubert@student-cs.fr">maxime.hubert@student-cs.fr</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/maxime-hubert0/" target="_blank">Linkedin</a></p>
+    <p>Phone: +33 6 95 69 84 19</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/maxime-hubert0/" target="_blank">LinkedIn</a></p>
   </section>
 
   <script>
