--- a/index.html
+++ b/index.html
@@ -449,6 +449,10 @@
   </section>
 
   <section id="projects">
+    <div style="margin-bottom: 2rem;">
+        Passionate about lighting design and Berlin's nightlife, after a master in engineering during which I had the ability to explore sound synthesis and to work as a professional light designer, I am looking to work as a club technician/ help.
+    </div>
+
     <h1 style="text-align: center;">Projects</h1>
 
     <h1 id="sbcs" style="text-align: left;">SBCS</h1>
