--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@
             isolation: isolate;  /* Creates a new stacking context */
         }
 
-         /* For mobile devices, adjust background attachment */
-         @media (max-width: 768px) {
-            #home {
-                background-attachment: scroll; /* Remove fixed attachment on mobile */
-                background-position: center center;
-            }
-        }
+        
 
         /* Dark overlay */
         #home::after {
@@ -142,10 +136,6 @@
             font-size: 1rem;
         }
 
-        .nav-link:hover {
-            color: #a8a8a8;
-        }
-
         .nav-item {
             position: relative;
             display: inline-block;
@@ -159,42 +149,8 @@
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1001;
             border-radius: 4px;
-            top: 100%; /* Position it right below the nav item */
-            left: 0;
-        }
-
-        /* Add invisible padding bridge */
-        .nav-item::after {
-            content: '';
-            position: absolute;
-            height: 20px;
-            width: 100%;
             top: 100%;
             left: 0;
-        }
-
-        .nav-item:hover .dropdown-content {
-            display: block;
-        }
-
-        @media (max-width: 768px) {
-            .nav-item.show .dropdown-content {
-                display: block;
-                position: fixed;
-                top: auto;
-                width: 100%;
-                left: 0;
-                margin-top: 0;
-            }
-
-            .dropdown-content {
-                width: 100%;
-                left: 0;
-            }
-
-            .dropdown-content a {
-                padding: 15px 20px; /* Larger touch targets for mobile */
-            }
         }
 
         .dropdown-content a {
@@ -209,12 +165,34 @@
             background-color: rgba(255, 255, 255, 0.1);
         }
 
-        .nav-link.has-dropdown::after {
-            content: '▼';
-            font-size: 0.7em;
-            margin-left: 5px;
-            display: inline-block;
-            vertical-align: middle;
+        /* Mobile-specific styles */
+        @media (max-width: 768px) {
+            .nav-item .dropdown-content {
+                position: fixed;
+                top: auto;
+                left: 0;
+                right: 0;
+                width: 100%;
+                margin-top: 0;
+            }
+
+            .dropdown-content a {
+                padding: 15px 20px;
+                text-align: center;
+            }
+
+            .nav-link.has-dropdown::after {
+                content: '▼';
+                font-size: 0.7em;
+                margin-left: 5px;
+                display: inline-block;
+                vertical-align: middle;
+            }
+
+            #home {
+                background-attachment: scroll;
+                background-position: center center;
+            }
         }
 
         /* Hero Section */
