--- a/index.html
+++ b/index.html
@@ -192,6 +192,55 @@
             vertical-align: middle;
         }
 
+        @media (max-width: 768px) {
+            .nav-item input[type="checkbox"] {
+                display: none;
+            }
+
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: rgba(0, 0, 0, 0.9);
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 1001;
+                border-radius: 4px;
+                top: 100%;
+                left: 0;
+            }
+
+            .nav-item input[type="checkbox"]:checked ~ .dropdown-content {
+                display: block;
+            }
+
+            /* Hide dropdown when scrolling using CSS only */
+            @supports (-webkit-touch-callout: none) {
+                /* iOS devices */
+                .nav-item:active .dropdown-content {
+                    display: none;
+                }
+            }
+
+            @supports not (-webkit-touch-callout: none) {
+                /* Non-iOS devices */
+                .nav-item:hover .dropdown-content {
+                    display: none;
+                }
+            }
+
+            .dropdown-content a {
+                color: white;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                transition: background-color 0.3s ease;
+            }
+
+            .dropdown-content a:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+        }
+
         /* Hero Section */
         #home {
             min-height: 100vh;
