--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         }
 
         .contact-info {
-            text-align: left;
+            text-align: center;
         }
 
         .contact-image img {
@@ -839,9 +839,9 @@
                 <p>Phone: +33 6 95 69 84 19</p>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/maxime-hubert0/" target="_blank">LinkedIn</a></p>
             </div>
-            <div class="contact-image">
-                <img src="https://imgur.com/ZGnwCjp.jpg" alt="Maxime Hubert">
-            </div>
+        </div>
+        <div class="contact-image">
+            <img src="https://imgur.com/ZGnwCjp.jpg" alt="Maxime Hubert">
         </div>
     </section>
 
