--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
             border-radius: 50%; /* Makes the image circular */
             border: 2px solid white;
             object-fit: cover;
+            margin-top: 2rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
