--- a/index.html
+++ b/index.html
@@ -264,14 +264,13 @@
         }
 
         .project-card .project-media video {
-            width: 100%; /* Make the video width fill the container */
-            height: auto; /* Maintain aspect ratio by adjusting height automatically */
-            max-width: 100%; /* Prevent video from exceeding the container's width */
-            display: block; /* Block-level element for proper centering */
-            margin: 0 auto; /* Center the video horizontally */
-            object-fit: fill; /* Stretch to fill the entire container */
+            width: auto;
+            height: 100%;
+            max-width: 100%;
+            margin: 0 auto;
+            display: block;
+            object-fit: contain;
         }
-
 
         /* Play button overlay */
         .project-card .project-media .play-button {
