--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             padding-top: 80px;
             text-align: center;
             position: relative;
-            background-image: url('https://imgur.com/zrP02A8.jpg');  /* Replace with your image URL */
+            background-image: url('https://i.imgur.com/zrP02A8.jpg');  /* Replace with your image URL */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;  /* Creates a parallax effect */
