--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
         </div>
     </div>
 
-    <div class="project-card">
+    <!-- <div class="project-card">
         <div class="project-info">
             <h3>Lunchbox Candy</h3>
             <p>Installation of paintings at Aeden for Lunchbox Candy. Design of sound interactive light shadders</p>
@@ -779,7 +779,7 @@
             Your browser does not support the video tag.
           </video>
         </div>
-      </div>
+      </div> -->
   
     <div class="project-card">
         <div class="project-info">
