--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
   <section id="projects">
     <div style="margin-bottom: 2rem;">
-        Passionate about lighting design and Berlin's nightlife, after a master in engineering during which I had the ability to explore sound synthesis and to work as a professional light designer, I am looking to work as a club technician/ help.
+        Passionate about lighting design and Berlin's vibrant nightlife, I am seeking to work as a club technician or assistant. During my master's in engineering, I had the opportunity to explore sound synthesis while also gaining professional experience as a lighting designer.
     </div>
 
     <h1 style="text-align: center;">Projects</h1>
