--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
   <section id="projects">
     <div style="margin-bottom: 2rem;">
-        Passionate about lighting design and Berlin's vibrant nightlife, I am seeking to work as a club technician or assistant. During my master's in engineering, I had the opportunity to explore sound synthesis while also gaining professional experience as a lighting designer.
+        Passionate about lighting design and Berlin's vibrant nightlife, I am seeking to work as a club technician or assistant. During my master's in engineering, I had the opportunity to explore sound synthesis while also gaining professional experience as a light designer.
     </div>
 
     <h1 style="text-align: center;">Projects</h1>
@@ -519,7 +519,7 @@
         My responsibilities included conceptualizing and designing lighting setups, installing the equipment, and managing the lighting during events.
     </div>
     <div style="margin-bottom: 2rem;"> 
-        I primarily worked with the MA2 Ultra-Light and MA1 lighting consoles. For larger stages, I occasionally operated full-size MA2 consoles. I programmed for events  dynamic animations 
+        I primarily worked with the MA2 Ultra-Light and MA1 lighting consoles. For larger stages, I occasionally operated full-size MA2/3 consoles. I programmed for events  dynamic animations 
         with our scenes and operated scenographies during the parties.
     </div>
 
@@ -531,6 +531,21 @@
             <li>6 Clay Paky K20</li>
             <li>Assorted washes, blinders, strobes, and smoke machines</li>
         </ul>
+        <p>You can find below some pictures and videos of those in action.</p>
+    </div>
+
+    <div class="project-card">
+        <div class="project-info">
+            <h3>Student party</h3>
+            <p>Design and operation of this scenography with 20 lyres and 4 k20.</p>
+        </div>
+        <div style="margin-bottom: 2rem;" class="project-media">
+            <!-- <div class="play-button"></div> -->
+            <video controls>
+                <source src="https://imgur.com/ZirdagH.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </div>
     
 
@@ -549,6 +564,41 @@
             </div>
             <div class="slide">
                 <img src="https://imgur.com/DqpGXUy.jpg" alt="Creative Design Visual 3">
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots-container"></div>
+        </div>
+    </div>
+
+    <div class="project-card">
+        <div class="project-info">
+            <h3>NDT 2022</h3>
+            <p>Design and operation of a grill scenography for a various artists night, ranging from electro to reggae.</p>
+            <p>rental of 2 Ayrton ghibli-s and 10 Ayrton nandobeam s-6</p>
+        </div>
+        <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-3">
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <div class="slide active">
+                <img src="https://imgur.com/D8YA2tv.jpg" alt="NDT 1">
+            </div>
+            <div class="slide">
+                <img src="https://imgur.com/J27QlSW.jpg" alt="NDT 2">
+            </div>
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/1cFb1cN.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
@@ -582,41 +632,6 @@
         </div>
         <div class="project-media">
           <img src="https://imgur.com/QfjIola.jpg" alt="Wrecking 1">
-        </div>
-    </div>
-
-    <div class="project-card">
-        <div class="project-info">
-            <h3>NDT 2022</h3>
-            <p>Design and operation of a grill scenography for a various artists night, ranging from electro to reggae.</p>
-            <p>rental of 2 Ayrton ghibli-s and 10 Ayrton nandobeam s-6</p>
-        </div>
-        <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-3">
-            <div class="slide active">
-                <img src="https://imgur.com/D8YA2tv.jpg" alt="NDT 1">
-            </div>
-            <div class="slide">
-                <img src="https://imgur.com/J27QlSW.jpg" alt="NDT 2">
-            </div>
-            <div class="slide">
-                <div class="project-media">
-                    <video controls>
-                        <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="project-media">
-                    <video controls>
-                        <source src="https://imgur.com/1cFb1cN.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-            </div>
-            <button class="prev">&#10094;</button>
-            <button class="next">&#10095;</button>
-            <div class="dots-container"></div>
         </div>
     </div>
 
@@ -664,20 +679,6 @@
             <!-- <div class="play-button"></div> -->
             <video controls>
                 <source src="https://imgur.com/6tAevvC.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-    </div>
-
-    <div class="project-card">
-        <div class="project-info">
-            <h3>Student party</h3>
-            <p>Design and operation of this scenography with 20 lyres and 4 k20.</p>
-        </div>
-        <div style="margin-bottom: 2rem;" class="project-media">
-            <!-- <div class="play-button"></div> -->
-            <video controls>
-                <source src="https://imgur.com/ZirdagH.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
